Fixed overlapping colors and resolved UI issue with editor template

--- a/_navigation.scss
+++ b/_navigation.scss
@@ -59,7 +59,7 @@ nav.subsite {
 li.subnav__topLevel-listItems a,
 a.subsite-navigation__top-link .menu-item-text,
 .ms-core-listMenu-item:link {
-  color: #373d3f;
+  color: #373d3f !important;
 }
 
 .subnav__topLevel-listItems {
