--- a/_sharepoint.scss
+++ b/_sharepoint.scss
@@ -6,6 +6,24 @@
   box-sizing: content-box;
 }
 
+input{
+  font-size: 12pt;
+  &[type="text"] {
+    width: 100%;
+  }
+}
+
+div.ms-formfieldlabelcontainer span.ms-formfieldlabel {
+  font-size: 11pt;
+}
+
+.ms-formfieldvaluecontainer table {
+  margin-bottom: 0;
+  td {
+    padding: 0 !important;
+  }
+}
+
 a[id*="ExplicitLogin"][href*="www"]{
   display: none !important;
 }
@@ -21,6 +39,14 @@ a[id*="ExplicitLogin"][href*="www"]{
 #ms-designer-ribbon {
   width: 100%;
   background: #EFEFEF;
+}
+
+#Ribbon\.EditingTools\.CPEditTab\.Font\.FontColor\.Menu .ms-cui-smenu-inner {
+  position: relative;
+  #Ribbon\.EditingTools\.CPEditTab\.Font\.FontColor\.Menu\.Ms,
+  #Ribbon\.EditingTools\.CPEditTab\.Font\.FontColor\.Menu\.MsCustom {
+    display: none;
+  }
 }
 
 .ms-cui-smenu-inner {
